--- a/central-config/application.yml
+++ b/central-config/application.yml
@@ -5,7 +5,7 @@
 # Property used on app startup to check the config server status
 configserver:
     name: JHipster Registry config server
-    status: Connected to the JHipster Registry config server!
+    status: https://github.com/zeb-dream/jhipster
 
 # Default JWT secret token (to be changed in production!)
 jhipster:
