--- a/central-config/uaa-dev.yml
+++ b/central-config/uaa-dev.yml
@@ -33,7 +33,7 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.112:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: root
         hikari:
