--- a/central-config/m002_authority-dev.yml
+++ b/central-config/m002_authority-dev.yml
@@ -30,7 +30,7 @@ spring:
     jackson:
         serialization.indent_output: true
     datasource:
-        url: jdbc:mysql://192.168.1.62:3306/m002_role?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.112:10001/m002_authority?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: root
         hikari:
