--- a/central-config/m001_entrance-dev.yml
+++ b/central-config/m001_entrance-dev.yml
@@ -13,7 +13,7 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://admin:${jhipster.registry.password}@localhost:18761/eureka/
+            defaultZone: http://admin:${jhipster.registry.password}@192.168.1.20:18761/eureka/
 
 spring:
     profiles:
@@ -27,9 +27,9 @@ spring:
     jackson:
         serialization.indent_output: true
     datasource:
-        url: jdbc:mysql://192.168.1.112:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.20:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: root
+        password: P@ssword
         hikari:
             data-source-properties:
                 cachePrepStmts: true
