--- a/central-config/m002_authority-dev.yml
+++ b/central-config/m002_authority-dev.yml
@@ -12,7 +12,7 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://admin:${jhipster.registry.password}@localhost:18761/eureka/
+            defaultZone: http://admin:${jhipster.registry.password}@192.168.1.20:18761/eureka/
 
 spring:
     mvc:
@@ -30,9 +30,9 @@ spring:
     jackson:
         serialization.indent_output: true
     datasource:
-        url: jdbc:mysql://192.168.1.112:10001/m002_authority?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.20:10001/m002_role?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: root
+        password: P@ssword
         hikari:
             data-source-properties:
                 cachePrepStmts: true
