--- a/central-config/uaa-dev.yml
+++ b/central-config/uaa-dev.yml
@@ -18,7 +18,7 @@ eureka:
         prefer-ip-address: true
     client:
         service-url:
-            defaultZone: http://admin:${jhipster.registry.password}@localhost:18761/eureka/
+            defaultZone: http://admin:${jhipster.registry.password}@192.168.1.20:18761/eureka/
 
 spring:
     profiles:
@@ -33,9 +33,9 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://192.168.1.112:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.20:10001/uaa?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: root
+        password: P@ssword
         hikari:
             data-source-properties:
                 cachePrepStmts: true
