--- a/central-config/gateway-dev.yml
+++ b/central-config/gateway-dev.yml
@@ -16,14 +16,22 @@
 eureka:
     instance:
         prefer-ip-address: true
+        ip-address: localhost
     client:
-        service-url:
+        enabled: true
+        healthcheck:
+            enabled: true
+        registerWithEureka: true
+        fetchRegistry: true
+        serviceUrl:
             defaultZone: http://admin:${jhipster.registry.password}@192.168.1.20:18761/eureka/
 
 spring:
     profiles:
         active: dev
         include: swagger
+    autoconfigure:
+        exclude: org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration
     devtools:
         restart:
             enabled: true
@@ -33,7 +41,7 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://192.168.1.20:10001/getway?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://192.168.1.20:10001/gateway?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: P@ssword
         hikari:
@@ -52,10 +60,17 @@ spring:
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
             hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
-            hibernate.cache.hazelcast.instance_name: getway
+            hibernate.cache.hazelcast.instance_name: gateway
             hibernate.cache.use_minimal_puts: true
             hibernate.cache.hazelcast.use_lite_member: true
     data:
+        cassandra:
+            contactPoints: localhost
+            protocolVersion: V4
+            compression: LZ4
+            keyspaceName: gateway
+            repositories:
+                enabled: false
     mail:
         host: localhost
         port: 25
@@ -65,19 +80,13 @@ spring:
         cache-seconds: 1
     thymeleaf:
         cache: false
-    zipkin: # Use the "zipkin" Maven profile to have the Spring Cloud Zipkin dependencies
-        base-url: http://localhost:9411
-        enabled: false
-        locator:
-            discovery:
-                enabled: true
 
 liquibase:
     contexts: dev
 
 # ===================================================================
 # To enable SSL, generate a certificate using:
-# keytool -genkey -alias getway -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
+# keytool -genkey -alias gateway -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
 #
 # You can also use Let's Encrypt:
 # https://maximilian-boehm.com/hp2121/Create-a-Java-Keystore-JKS-from-Let-s-Encrypt-Certificates.htm
@@ -90,10 +99,10 @@ liquibase:
 #        key-store: keystore.p12
 #        key-store-password: <your-password>
 #        keyStoreType: PKCS12
-#        keyAlias: getway
+#        keyAlias: gateway
 # ===================================================================
 server:
-    port: 8080
+    port: 19998
 
 # ===================================================================
 # JHipster specific properties
@@ -103,10 +112,8 @@ server:
 
 jhipster:
     gateway:
-        rate-limiting:
+        rate-limiting: # Read the documentation in the GatewayConfiguration class before enabling.
             enabled: false
-            limit: 100000
-            duration-in-seconds: 3600
         authorized-microservices-endpoints: # Access Control Policy, if left empty for a route, all endpoints will be accessible
             app1: /api,/v2/api-docs # recommended dev configuration
     http:
@@ -115,30 +122,22 @@ jhipster:
         hazelcast: # Hazelcast distributed cache
             time-to-live-seconds: 3600
             backup-count: 1
-    # CORS is only enabled by default with the "dev" profile, so BrowserSync can access the API
-    cors:
-        allowed-origins: "*"
-        allowed-methods: GET, PUT, POST, DELETE, OPTIONS
-        allowed-headers: "*"
-        exposed-headers:
-        allow-credentials: true
-        max-age: 1800
     mail: # specific JHipster mail property, for standard properties see MailProperties
-        from: getway@localhost
-        base-url: http://127.0.0.1:8080
+        from: gateway@localhost
+        base-url: http://127.0.0.1:19998
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx.enabled: true
         graphite: # Use the "graphite" Maven profile to have the Graphite dependencies
             enabled: false
             host: localhost
             port: 2003
-            prefix: getway
+            prefix: gateway
         prometheus: # Use the "prometheus" Maven profile to have the Prometheus dependencies
             enabled: false
             endpoint: /prometheusMetrics
         logs: # Reports Dropwizard metrics in the logs
             enabled: false
-            report-frequency: 60 # in seconds
+            reportFrequency: 60 # in seconds
     logging:
         logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
             enabled: false
@@ -148,7 +147,12 @@ jhipster:
         spectator-metrics: # Reports Spectator Circuit Breaker metrics in the logs
             enabled: false
             # edit spring.metrics.export.delay-millis to set report frequency
-
+    cors:
+        allowed-origins: "*"
+        allowed-methods: GET, PUT, POST, DELETE, OPTIONS
+        allowed-headers: "*"
+        exposed-headers:
+        allow-credentials: true
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
@@ -157,5 +161,9 @@ jhipster:
 # More documentation is available at:
 # https://jhipster.github.io/common-application-properties/
 # ===================================================================
+M002:
+    m002url: http://localhost:10002
+ServerUrl:
+    gatewayUrl: http://localhost:19998
 
 application:
