--- a/central-config/uaa-dev.yml
+++ b/central-config/uaa-dev.yml
@@ -148,6 +148,6 @@ jhipster:
 # ===================================================================
 
 M002:
-    m002url: http://localhost:19998/m002_authority
+    m002url: http://m002_authority
     
 application:
