--- a/central-config/uaa-dev.yml
+++ b/central-config/uaa-dev.yml
@@ -148,6 +148,6 @@ jhipster:
 # ===================================================================
 
 M002:
-    m002url: http://m002_authority
+    m002url: http://192.168.1.13:m002_authority:10002
     
 application:
