--- a/central-config/uaa-dev.yml
+++ b/central-config/uaa-dev.yml
@@ -160,7 +160,7 @@ security:
           token_key: http://localhost:19999/oauth/token_key
 
 M002:
-    m002url: http://m002_authority
+    m002url: http://localhost:19998
 UAA:
     uaaUrl: http://localhost:19999
 
