--- a/central-config/gateway-dev.yml
+++ b/central-config/gateway-dev.yml
@@ -16,7 +16,7 @@
 eureka:
     instance:
         prefer-ip-address: true
-        ip-address: localhost
+#        ip-address: localhost
     client:
         enabled: true
         healthcheck:
